--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
       "declaration": true,
       "outDir": "build",
       "sourceMap": true,
+      "noImplicitAny": true,
       "esModuleInterop": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "**/*.spec.ts"]
+    "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
 }
