--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "js-wavela",
   "version": "1.0.0",
   "description": "A simple JavaScript state management library.",
-  "main": "index.js",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "test": "jest",
     "build": "tsc"
